--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -61,7 +61,7 @@
                     <h2>テクノロジー</h2>
                     <h3>SAMURAIが新しい動画をリリース</h3>
                     <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p>
-                    <iframe scr="https://www.youtube.com/embed/2JLiGSUohEo?si=v7d-BfukRw81t4TD" width="560" height="315"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo" title="【必須で見るべき】HTML/CSSとは？それぞれの特徴をわかりやすく解説！" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </section>
             </article>
         </main>
